--- a/package.json
+++ b/package.json
@@ -14,16 +14,20 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@docusaurus/core": "^2.0.1",
-    "@docusaurus/preset-classic": "^2.0.1",
+    "@apexlang/codegen": "^0.0.7",
+    "@apexlang/core": "^0.1.0",
+    "@docusaurus/core": "^2.1.0",
+    "@docusaurus/preset-classic": "^2.1.0",
+    "@docusaurus/theme-live-codeblock": "^2.1.0",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.1.1",
     "prism-react-renderer": "^1.3.3",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-live": "^2.4.1"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "^2.0.1"
+    "@docusaurus/module-type-aliases": "^2.1.0"
   },
   "browserslist": {
     "production": [
